methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: Missing closing brace `}' assumed here
move(nbPas:Int,versLAvant:Boolean){
^MethodsArgs:2: error: expected class or object definition
move(nbPas:Int,versLAvant:Boolean){
^